--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: PersonalWebsite
-description: ulasonat's personal website
+title: Ulas Onat Alakent
+description: (347-515-5280)
